# fastapi_challenge

Python/: pyproject.toml
Python/app/: main.py
Python/app/api/: company.py  user.py
Python/app/models/: company.py  user.py
Python/app/services/: company_service.py  user_service.py
