[project]
name = "first_challenge"
version = "0.0.1"
description = "This is a fastapi challenge to create a service"
authors = [
    {name = "Lucas Ramos"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
